Patched loading files of module Time.

--- a/_doc/404.html
+++ b/_doc/404.html
@@ -7,8 +7,8 @@
 
 	<title>Page not found | lib</title>
 
-	<script type="text/javascript" src="resources/combined.js?673612331"></script>
-	<script type="text/javascript" src="elementlist.js?1621563188"></script>
+	<script type="text/javascript" src="resources/combined.js?3008458700"></script>
+	<script type="text/javascript" src="elementlist.js?3014309675"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -42,6 +42,8 @@
 		<div id="elements">
 			<h3>Classes</h3>
 			<ul>
+				<li><a href="class-lib.Lib.html">lib\Lib</a></li>
+				<li><a href="class-lib.Loading.html">lib\Loading</a></li>
 				<li><a href="class-lib.Net.Database.html">lib\Net\Database</a></li>
 				<li><a href="class-lib.Net.Net.html">lib\Net\Net</a></li>
 				<li><a href="class-lib.Time.Czech.html">lib\Time\Czech</a></li>
@@ -64,11 +66,6 @@
 				<li><a href="function-folderContent.html">folderContent</a></li>
 				<li><a href="function-folderContentWithoutDots.html">folderContentWithoutDots</a></li>
 				<li><a href="function-http_prihlaseni.html">http_prihlaseni</a></li>
-				<li><a href="function-lib.load.html">lib\load</a></li>
-				<li><a href="function-lib.loadCSS.html">lib\loadCSS</a></li>
-				<li><a href="function-lib.loadJS.html">lib\loadJS</a></li>
-				<li><a href="function-lib.loadLoader.html">lib\loadLoader</a></li>
-				<li><a href="function-lib.loadPHP.html">lib\loadPHP</a></li>
 				<li><a href="function-mocnina.html">mocnina</a></li>
 				<li><a href="function-obnovit.html">obnovit</a></li>
 				<li><a href="function-poslaniEmailu.html">poslaniEmailu</a></li>
