--- a/_doc/class-lib.Net.Net.html
+++ b/_doc/class-lib.Net.Net.html
@@ -6,8 +6,8 @@
 
 	<title>Class lib\Net\Net | lib</title>
 
-	<script type="text/javascript" src="resources/combined.js?673612331"></script>
-	<script type="text/javascript" src="elementlist.js?1621563188"></script>
+	<script type="text/javascript" src="resources/combined.js?3008458700"></script>
+	<script type="text/javascript" src="elementlist.js?3014309675"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -103,25 +103,25 @@
 		<b>Namespace:</b> <a href="namespace-lib.html">lib</a>\<a href="namespace-lib.Net.html">Net</a><br />
 		
 
-		<b>Located at</b> <a href="source-class-lib.Net.Net.html#10-20" title="Go to source code">net/Net.php</a><br />
+		<b>Located at</b> <a href="source-class-lib.Net.Net.html#10-33" title="Go to source code">net/Net.php</a><br />
 	</div>
 
 
 
 	<table class="summary" id="methods">
 	<caption>Methods summary</caption>
-	<tr data-order="getClientIP" id="_getClientIP">
+	<tr data-order="clientIP" id="_clientIP">
 
 		<td class="attributes"><code>
 			 public 
-			IP
+			string
 			
 			</code>
 		</td>
 
 		<td class="name"><div>
-		<a class="anchor" href="#_getClientIP">#</a>
-		<code><a href="source-class-lib.Net.Net.html#11-18" title="Go to source code">getClientIP</a>( )</code>
+		<a class="anchor" href="#_clientIP">#</a>
+		<code><a href="source-class-lib.Net.Net.html#11-18" title="Go to source code">clientIP</a>( )</code>
 
 		<div class="description short">
 			
@@ -138,7 +138,44 @@
 
 				<h4>Returns</h4>
 				<div class="list">
-					<code>IP</code><br>address<br />
+					<code>string</code><br>IP address<br />
+				</div>
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
+	<tr data-order="pageURL" id="_pageURL">
+
+		<td class="attributes"><code>
+			 public 
+			string
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_pageURL">#</a>
+		<code><a href="source-class-lib.Net.Net.html#20-32" title="Go to source code">pageURL</a>( )</code>
+
+		<div class="description short">
+			
+<p>Returns URL of page, where function is called.</p>
+
+		</div>
+
+		<div class="description detailed hidden">
+			
+<p>Returns URL of page, where function is called.</p>
+
+
+
+
+				<h4>Returns</h4>
+				<div class="list">
+					<code>string</code><br>URL of page<br />
 				</div>
 
 
