--- a/_doc/class-lib.Time.English.html
+++ b/_doc/class-lib.Time.English.html
@@ -6,8 +6,8 @@
 
 	<title>Class lib\Time\English | lib</title>
 
-	<script type="text/javascript" src="resources/combined.js?673612331"></script>
-	<script type="text/javascript" src="elementlist.js?1621563188"></script>
+	<script type="text/javascript" src="resources/combined.js?3008458700"></script>
+	<script type="text/javascript" src="elementlist.js?3014309675"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -117,7 +117,7 @@
 		<b>Namespace:</b> <a href="namespace-lib.html">lib</a>\<a href="namespace-lib.Time.html">Time</a><br />
 		
 
-		<b>Located at</b> <a href="source-class-lib.Time.English.html#10-19" title="Go to source code">time/English/English.php</a><br />
+		<b>Located at</b> <a href="source-class-lib.Time.English.html#10-21" title="Go to source code">time/english/English.php</a><br />
 	</div>
 
 
@@ -128,14 +128,14 @@
 
 		<td class="attributes"><code>
 			 public 
-			text
+			string
 			
 			</code>
 		</td>
 
 		<td class="name"><div>
 		<a class="anchor" href="#_timeWords">#</a>
-		<code><a href="source-class-lib.Time.English.html#11-15" title="Go to source code">timeWords</a>( )</code>
+		<code><a href="source-class-lib.Time.English.html#11-16" title="Go to source code">timeWords</a>( )</code>
 
 		<div class="description short">
 			
@@ -152,7 +152,7 @@
 
 				<h4>Returns</h4>
 				<div class="list">
-					<code>text</code><br>Time in words<br />
+					<code>string</code><br>Time in words.<br />
 				</div>
 
 
@@ -167,14 +167,14 @@
 
 		<td class="attributes"><code>
 			 public 
-			text
+			string
 			
 			</code>
 		</td>
 
 		<td class="name"><div>
 		<a class="anchor" href="#_dayOfWeek">#</a>
-		<code><a href="source-class-lib.Time.English.html#16-18" title="Go to source code">dayOfWeek</a>( )</code>
+		<code><a href="source-class-lib.Time.English.html#17-20" title="Go to source code">dayOfWeek</a>( )</code>
 
 		<div class="description short">
 			
@@ -191,7 +191,7 @@
 
 				<h4>Returns</h4>
 				<div class="list">
-					<code>text</code><br>Day of week in word<br />
+					<code>string</code><br>Day of the week in word.<br />
 				</div>
 
 
