--- a/_doc/class-lib.Time.Language.html
+++ b/_doc/class-lib.Time.Language.html
@@ -6,8 +6,8 @@
 
 	<title>Interface lib\Time\Language | lib</title>
 
-	<script type="text/javascript" src="resources/combined.js?673612331"></script>
-	<script type="text/javascript" src="elementlist.js?1621563188"></script>
+	<script type="text/javascript" src="resources/combined.js?3008458700"></script>
+	<script type="text/javascript" src="elementlist.js?3014309675"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -124,7 +124,7 @@
 
 		<td class="attributes"><code>
 			 public 
-			text
+			string
 			
 			</code>
 		</td>
@@ -148,7 +148,7 @@
 
 				<h4>Returns</h4>
 				<div class="list">
-					<code>text</code><br>Time in words<br />
+					<code>string</code><br>Time in words.<br />
 				</div>
 
 
@@ -161,7 +161,7 @@
 
 		<td class="attributes"><code>
 			 public 
-			text
+			string
 			
 			</code>
 		</td>
@@ -185,7 +185,7 @@
 
 				<h4>Returns</h4>
 				<div class="list">
-					<code>text</code><br>Day of week in word<br />
+					<code>string</code><br>Day of the week in word.<br />
 				</div>
 
 
