--- a/_doc/class-lib.Time.Czech.html
+++ b/_doc/class-lib.Time.Czech.html
@@ -6,8 +6,8 @@
 
 	<title>Class lib\Time\Czech | lib</title>
 
-	<script type="text/javascript" src="resources/combined.js?673612331"></script>
-	<script type="text/javascript" src="elementlist.js?1621563188"></script>
+	<script type="text/javascript" src="resources/combined.js?3008458700"></script>
+	<script type="text/javascript" src="elementlist.js?3014309675"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -117,7 +117,7 @@
 		<b>Namespace:</b> <a href="namespace-lib.html">lib</a>\<a href="namespace-lib.Time.html">Time</a><br />
 		
 
-		<b>Located at</b> <a href="source-class-lib.Time.Czech.html#10-30" title="Go to source code">time/Czech/Czech.php</a><br />
+		<b>Located at</b> <a href="source-class-lib.Time.Czech.html#10-33" title="Go to source code">time/czech/Czech.php</a><br />
 	</div>
 
 
@@ -128,14 +128,14 @@
 
 		<td class="attributes"><code>
 			 public 
-			text
+			string
 			
 			</code>
 		</td>
 
 		<td class="name"><div>
 		<a class="anchor" href="#_timeWords">#</a>
-		<code><a href="source-class-lib.Time.Czech.html#11-15" title="Go to source code">timeWords</a>( )</code>
+		<code><a href="source-class-lib.Time.Czech.html#11-16" title="Go to source code">timeWords</a>( )</code>
 
 		<div class="description short">
 			
@@ -152,7 +152,7 @@
 
 				<h4>Returns</h4>
 				<div class="list">
-					<code>text</code><br>Time in words<br />
+					<code>string</code><br>Time in words.<br />
 				</div>
 
 
@@ -167,14 +167,14 @@
 
 		<td class="attributes"><code>
 			 public 
-			text
+			string
 			
 			</code>
 		</td>
 
 		<td class="name"><div>
 		<a class="anchor" href="#_dayOfWeek">#</a>
-		<code><a href="source-class-lib.Time.Czech.html#16-18" title="Go to source code">dayOfWeek</a>( )</code>
+		<code><a href="source-class-lib.Time.Czech.html#17-20" title="Go to source code">dayOfWeek</a>( )</code>
 
 		<div class="description short">
 			
@@ -191,7 +191,7 @@
 
 				<h4>Returns</h4>
 				<div class="list">
-					<code>text</code><br>Day of week in word<br />
+					<code>string</code><br>Day of the week in word.<br />
 				</div>
 
 
@@ -213,7 +213,7 @@
 
 		<td class="name"><div>
 		<a class="anchor" href="#_nameDay">#</a>
-		<code><a href="source-class-lib.Time.Czech.html#20-29" title="Go to source code">nameDay</a>( <span>integer <var>$day</var> = <span class="php-num">0</span></span>, <span>integer <var>$month</var> = <span class="php-num">0</span></span> )</code>
+		<code><a href="source-class-lib.Time.Czech.html#22-32" title="Go to source code">nameDay</a>( <span>integer <var>$day</var> = <span class="php-num">0</span></span>, <span>integer <var>$month</var> = <span class="php-num">0</span></span> )</code>
 
 		<div class="description short">
 			
@@ -230,9 +230,9 @@
 				<h4>Parameters</h4>
 				<div class="list"><dl>
 					<dt><var>$day</var></dt>
-					<dd><code>integer</code><br>$day Number of day (from 0 for Sunday to 6 for Saturday)</dd>
+					<dd><code>integer</code><br>$day Number of day (from 0 for Sunday to 6 for Saturday).</dd>
 					<dt><var>$month</var></dt>
-					<dd><code>integer</code><br>$month Number of month (from 0 for January to 11 for December)</dd>
+					<dd><code>integer</code><br>$month Number of month (from 0 for January to 11 for December).</dd>
 				</dl></div>
 
 
