--- a/_doc/class-lib.Time.Time.html
+++ b/_doc/class-lib.Time.Time.html
@@ -6,8 +6,8 @@
 
 	<title>Class lib\Time\Time | lib</title>
 
-	<script type="text/javascript" src="resources/combined.js?673612331"></script>
-	<script type="text/javascript" src="elementlist.js?1621563188"></script>
+	<script type="text/javascript" src="resources/combined.js?3008458700"></script>
+	<script type="text/javascript" src="elementlist.js?3014309675"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -108,7 +108,7 @@
 		<b>Namespace:</b> <a href="namespace-lib.html">lib</a>\<a href="namespace-lib.Time.html">Time</a><br />
 		
 
-		<b>Located at</b> <a href="source-class-lib.Time.Time.html#10-22" title="Go to source code">time/Time.php</a><br />
+		<b>Located at</b> <a href="source-class-lib.Time.Time.html#10-23" title="Go to source code">time/Time.php</a><br />
 	</div>
 
 
@@ -119,31 +119,31 @@
 
 		<td class="attributes"><code>
 			 public 
-			text
+			string
 			
 			</code>
 		</td>
 
 		<td class="name"><div>
 		<a class="anchor" href="#_dateJS">#</a>
-		<code><a href="source-class-lib.Time.Time.html#14-21" title="Go to source code">dateJS</a>( )</code>
+		<code><a href="source-class-lib.Time.Time.html#14-22" title="Go to source code">dateJS</a>( )</code>
 
 		<div class="description short">
 			
-<p>Writes date by Javascript function.</p>
+<p>Writes date by JavaScript function.</p>
 
 		</div>
 
 		<div class="description detailed hidden">
 			
-<p>Writes date by Javascript function.</p>
+<p>Writes date by JavaScript function.</p>
 
 
 
 
 				<h4>Returns</h4>
 				<div class="list">
-					<code>text</code><br>Date in format &lt;day&gt;.&lt;month&gt;.&lt;year&gt;<br />
+					<code>string</code><br>Date in format &lt;day&gt;.&lt;month&gt;.&lt;year&gt;.<br />
 				</div>
 
 
