--- a/_doc/index.html
+++ b/_doc/index.html
@@ -40,6 +40,8 @@
 		<div id="elements">
 			<h3>Classes</h3>
 			<ul>
+				<li><a href="class-lib.Lib.html">lib\Lib</a></li>
+				<li><a href="class-lib.Loading.html">lib\Loading</a></li>
 				<li><a href="class-lib.Net.Database.html">lib\Net\Database</a></li>
 				<li><a href="class-lib.Net.Net.html">lib\Net\Net</a></li>
 				<li><a href="class-lib.Time.Czech.html">lib\Time\Czech</a></li>
@@ -62,11 +64,6 @@
 				<li><a href="function-folderContent.html">folderContent</a></li>
 				<li><a href="function-folderContentWithoutDots.html">folderContentWithoutDots</a></li>
 				<li><a href="function-http_prihlaseni.html">http_prihlaseni</a></li>
-				<li><a href="function-lib.load.html">lib\load</a></li>
-				<li><a href="function-lib.loadCSS.html">lib\loadCSS</a></li>
-				<li><a href="function-lib.loadJS.html">lib\loadJS</a></li>
-				<li><a href="function-lib.loadLoader.html">lib\loadLoader</a></li>
-				<li><a href="function-lib.loadPHP.html">lib\loadPHP</a></li>
 				<li><a href="function-mocnina.html">mocnina</a></li>
 				<li><a href="function-obnovit.html">obnovit</a></li>
 				<li><a href="function-poslaniEmailu.html">poslaniEmailu</a></li>
