--- a/_doc/namespace-lib.html
+++ b/_doc/namespace-lib.html
@@ -6,8 +6,8 @@
 
 	<title>Namespace lib | lib</title>
 
-	<script type="text/javascript" src="resources/combined.js?673612331"></script>
-	<script type="text/javascript" src="elementlist.js?1621563188"></script>
+	<script type="text/javascript" src="resources/combined.js?3008458700"></script>
+	<script type="text/javascript" src="elementlist.js?3014309675"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -39,19 +39,16 @@
 
 
 		<div id="elements">
-
-
-
-
-
-			<h3>Functions</h3>
+			<h3>Classes</h3>
 			<ul>
-				<li><a href="function-lib.load.html">load</a></li>
-				<li><a href="function-lib.loadCSS.html">loadCSS</a></li>
-				<li><a href="function-lib.loadJS.html">loadJS</a></li>
-				<li><a href="function-lib.loadLoader.html">loadLoader</a></li>
-				<li><a href="function-lib.loadPHP.html">loadPHP</a></li>
+				<li><a href="class-lib.Lib.html">Lib</a></li>
+				<li><a href="class-lib.Loading.html">Loading</a></li>
 			</ul>
+
+
+
+
+
 		</div>
 	</div>
 </div>
@@ -100,35 +97,23 @@
 	</table>
 
 
-
-
-
-
-
-<table class="summary" id="functions">
-<caption>Functions summary</caption>
+<table class="summary" id="classes">
+<caption>Classes summary</caption>
 <tr>
-	<td class="name"><a href="function-lib.load.html">load</a></td>
-	<td>Loads files from desired directory.
+	<td class="name"><a href="class-lib.Lib.html">Lib</a></td>
+	<td>
 <!-- by Texy2! --></td>
 </tr>
 <tr>
-	<td class="name"><a href="function-lib.loadCSS.html">loadCSS</a></td>
-	<td>Loads cascading style sheets from desired directory.</td>
-</tr>
-<tr>
-	<td class="name"><a href="function-lib.loadJS.html">loadJS</a></td>
-	<td>Loads javascript files from desired directory.</td>
-</tr>
-<tr>
-	<td class="name"><a href="function-lib.loadLoader.html">loadLoader</a></td>
-	<td>Loads loader from desired directory.</td>
-</tr>
-<tr>
-	<td class="name"><a href="function-lib.loadPHP.html">loadPHP</a></td>
-	<td>Loads PHP files from desired directory.</td>
+	<td class="name"><a href="class-lib.Loading.html">Loading</a></td>
+	<td></td>
 </tr>
 </table>
+
+
+
+
+
 </div>
 
 	<div id="footer">
