--- a/_doc/source-class-lib.Time.Language.html
+++ b/_doc/source-class-lib.Time.Language.html
@@ -7,8 +7,8 @@
 
 	<title>File time/Language.php | lib</title>
 
-	<script type="text/javascript" src="resources/combined.js?673612331"></script>
-	<script type="text/javascript" src="elementlist.js?1621563188"></script>
+	<script type="text/javascript" src="resources/combined.js?3008458700"></script>
+	<script type="text/javascript" src="elementlist.js?3014309675"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -96,7 +96,7 @@
 </span></span><span id="3" class="l"><a class="l" href="#3"> 3: </a><span class="php-comment"> * Handling with time in different languages.
 </span></span><span id="4" class="l"><a class="l" href="#4"> 4: </a><span class="php-comment"> * 
 </span></span><span id="5" class="l"><a class="l" href="#5"> 5: </a><span class="php-comment"> * @author DJohnny
-</span></span><span id="6" class="l"><a class="l" href="#6"> 6: </a><span class="php-comment"> * @version 13.10.2012
+</span></span><span id="6" class="l"><a class="l" href="#6"> 6: </a><span class="php-comment"> * @version 19.12.2012
 </span></span><span id="7" class="l"><a class="l" href="#7"> 7: </a><span class="php-comment"> */</span>
 </span><span id="8" class="l"><a class="l" href="#8"> 8: </a><span class="php-keyword1">namespace</span> lib\<span class="php-keyword2">Time</span>;
 </span><span id="9" class="l"><a class="l" href="#9"> 9: </a>
@@ -104,14 +104,14 @@
 </span><span id="11" class="l"><a class="l" href="#11">11: </a>    <span class="php-comment">/**
 </span></span><span id="12" class="l"><a class="l" href="#12">12: </a><span class="php-comment">     * Writes time in words.
 </span></span><span id="13" class="l"><a class="l" href="#13">13: </a><span class="php-comment">     * 
-</span></span><span id="14" class="l"><a class="l" href="#14">14: </a><span class="php-comment">     * @return text Time in words
+</span></span><span id="14" class="l"><a class="l" href="#14">14: </a><span class="php-comment">     * @return string Time in words.
 </span></span><span id="15" class="l"><a class="l" href="#15">15: </a><span class="php-comment">     */</span>
 </span><span id="16" class="l"><a class="l" href="#16">16: </a>    <span class="php-keyword1">public</span> <span class="php-keyword1">function</span> <a id="_timeWords" href="#_timeWords">timeWords</a>();
 </span><span id="17" class="l"><a class="l" href="#17">17: </a>    
 </span><span id="18" class="l"><a class="l" href="#18">18: </a>    <span class="php-comment">/**
 </span></span><span id="19" class="l"><a class="l" href="#19">19: </a><span class="php-comment">     * Writes day of week in word.
 </span></span><span id="20" class="l"><a class="l" href="#20">20: </a><span class="php-comment">     * 
-</span></span><span id="21" class="l"><a class="l" href="#21">21: </a><span class="php-comment">     * @return text Day of week in word
+</span></span><span id="21" class="l"><a class="l" href="#21">21: </a><span class="php-comment">     * @return string Day of the week in word.
 </span></span><span id="22" class="l"><a class="l" href="#22">22: </a><span class="php-comment">     */</span>
 </span><span id="23" class="l"><a class="l" href="#23">23: </a>    <span class="php-keyword1">public</span> <span class="php-keyword1">function</span> <a id="_dayOfWeek" href="#_dayOfWeek">dayOfWeek</a>();
 </span><span id="24" class="l"><a class="l" href="#24">24: </a>}
