Added Math module.

--- a/_doc/class-lib.Time.Time.html
+++ b/_doc/class-lib.Time.Time.html
@@ -7,7 +7,7 @@
 	<title>Class lib\Time\Time | lib</title>
 
 	<script type="text/javascript" src="resources/combined.js?3008458700"></script>
-	<script type="text/javascript" src="elementlist.js?3014309675"></script>
+	<script type="text/javascript" src="elementlist.js?4146159183"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -23,6 +23,8 @@
 			<ul>
 				<li class="active"><a href="namespace-lib.html">lib<span></span></a>
 						<ul>
+				<li><a href="namespace-lib.Math.html">Math</a>
+						</li>
 				<li><a href="namespace-lib.Net.html">Net</a>
 						</li>
 				<li class="active"><a href="namespace-lib.Time.html">Time</a>
@@ -108,13 +110,120 @@
 		<b>Namespace:</b> <a href="namespace-lib.html">lib</a>\<a href="namespace-lib.Time.html">Time</a><br />
 		
 
-		<b>Located at</b> <a href="source-class-lib.Time.Time.html#10-23" title="Go to source code">time/Time.php</a><br />
+		<b>Located at</b> <a href="source-class-lib.Time.Time.html#10-51" title="Go to source code">time/Time.php</a><br />
 	</div>
 
 
 
 	<table class="summary" id="methods">
 	<caption>Methods summary</caption>
+	<tr data-order="__construct" id="___construct">
+
+		<td class="attributes"><code>
+			 public 
+			
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#___construct">#</a>
+		<code><a href="source-class-lib.Time.Time.html#11-14" title="Go to source code">__construct</a>( )</code>
+
+		<div class="description short">
+			
+<p>Constructor for class Time.</p>
+
+		</div>
+
+		<div class="description detailed hidden">
+			
+<p>Constructor for class Time.</p>
+
+
+
+
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
+	<tr data-order="datePHP" id="_datePHP">
+
+		<td class="attributes"><code>
+			 public 
+			string
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_datePHP">#</a>
+		<code><a href="source-class-lib.Time.Time.html#17-22" title="Go to source code">datePHP</a>( )</code>
+
+		<div class="description short">
+			
+<p>Returns date.</p>
+
+		</div>
+
+		<div class="description detailed hidden">
+			
+<p>Returns date.</p>
+
+
+
+
+				<h4>Returns</h4>
+				<div class="list">
+					<code>string</code><br>Date in format &lt;day&gt;.&lt;month&gt;.&lt;year&gt;.<br />
+				</div>
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
+	<tr data-order="timePHP" id="_timePHP">
+
+		<td class="attributes"><code>
+			 public 
+			string
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_timePHP">#</a>
+		<code><a href="source-class-lib.Time.Time.html#24-29" title="Go to source code">timePHP</a>( )</code>
+
+		<div class="description short">
+			
+<p>Returns time.</p>
+
+		</div>
+
+		<div class="description detailed hidden">
+			
+<p>Returns time.</p>
+
+
+
+
+				<h4>Returns</h4>
+				<div class="list">
+					<code>string</code><br>Time in format &lt;hour&gt;:&lt;minute&gt;:&lt;second&gt;.<br />
+				</div>
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
 	<tr data-order="dateJS" id="_dateJS">
 
 		<td class="attributes"><code>
@@ -126,7 +235,7 @@
 
 		<td class="name"><div>
 		<a class="anchor" href="#_dateJS">#</a>
-		<code><a href="source-class-lib.Time.Time.html#14-22" title="Go to source code">dateJS</a>( )</code>
+		<code><a href="source-class-lib.Time.Time.html#32-40" title="Go to source code">dateJS</a>( )</code>
 
 		<div class="description short">
 			
@@ -144,6 +253,43 @@
 				<h4>Returns</h4>
 				<div class="list">
 					<code>string</code><br>Date in format &lt;day&gt;.&lt;month&gt;.&lt;year&gt;.<br />
+				</div>
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
+	<tr data-order="timeJS" id="_timeJS">
+
+		<td class="attributes"><code>
+			 public 
+			string
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_timeJS">#</a>
+		<code><a href="source-class-lib.Time.Time.html#42-50" title="Go to source code">timeJS</a>( )</code>
+
+		<div class="description short">
+			
+<p>Writes real time by JavaScript function.</p>
+
+		</div>
+
+		<div class="description detailed hidden">
+			
+<p>Writes real time by JavaScript function.</p>
+
+
+
+
+				<h4>Returns</h4>
+				<div class="list">
+					<code>string</code><br>Time in format &lt;hour&gt;:&lt;minute&gt;:&lt;second&gt;.<br />
 				</div>
 
 
