--- a/_doc/index.html
+++ b/_doc/index.html
@@ -22,6 +22,8 @@
 			<ul>
 				<li><a href="namespace-lib.html">lib<span></span></a>
 						<ul>
+				<li><a href="namespace-lib.Math.html">Math</a>
+						</li>
 				<li><a href="namespace-lib.Net.html">Net</a>
 						</li>
 				<li><a href="namespace-lib.Time.html">Time</a>
@@ -42,6 +44,7 @@
 			<ul>
 				<li><a href="class-lib.Lib.html">lib\Lib</a></li>
 				<li><a href="class-lib.Loading.html">lib\Loading</a></li>
+				<li><a href="class-lib.Math.Math.html">lib\Math\Math</a></li>
 				<li><a href="class-lib.Net.Database.html">lib\Net\Database</a></li>
 				<li><a href="class-lib.Net.Net.html">lib\Net\Net</a></li>
 				<li><a href="class-lib.Time.Czech.html">lib\Time\Czech</a></li>
@@ -60,11 +63,9 @@
 
 			<h3>Functions</h3>
 			<ul>
-				<li><a href="function-factorial.html">factorial</a></li>
 				<li><a href="function-folderContent.html">folderContent</a></li>
 				<li><a href="function-folderContentWithoutDots.html">folderContentWithoutDots</a></li>
 				<li><a href="function-http_prihlaseni.html">http_prihlaseni</a></li>
-				<li><a href="function-mocnina.html">mocnina</a></li>
 				<li><a href="function-obnovit.html">obnovit</a></li>
 				<li><a href="function-poslaniEmailu.html">poslaniEmailu</a></li>
 				<li><a href="function-presmerovat.html">presmerovat</a></li>
@@ -115,6 +116,9 @@
 	<caption>Namespaces summary</caption>
 	<tr>
 		<td class="name"><a href="namespace-lib.html">lib</a></td>
+	</tr>
+	<tr>
+		<td class="name"><a href="namespace-lib.Math.html">lib\Math</a></td>
 	</tr>
 	<tr>
 		<td class="name"><a href="namespace-lib.Net.html">lib\Net</a></td>
