--- a/_doc/source-class-lib.Time.English.html
+++ b/_doc/source-class-lib.Time.English.html
@@ -8,7 +8,7 @@
 	<title>File time/english/English.php | lib</title>
 
 	<script type="text/javascript" src="resources/combined.js?3008458700"></script>
-	<script type="text/javascript" src="elementlist.js?3014309675"></script>
+	<script type="text/javascript" src="elementlist.js?4146159183"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -24,6 +24,8 @@
 			<ul>
 				<li class="active"><a href="namespace-lib.html">lib<span></span></a>
 						<ul>
+				<li><a href="namespace-lib.Math.html">Math</a>
+						</li>
 				<li><a href="namespace-lib.Net.html">Net</a>
 						</li>
 				<li class="active"><a href="namespace-lib.Time.html">Time</a>
