--- a/_doc/tree.html
+++ b/_doc/tree.html
@@ -7,7 +7,7 @@
 	<title>Tree | lib</title>
 
 	<script type="text/javascript" src="resources/combined.js?3008458700"></script>
-	<script type="text/javascript" src="elementlist.js?3014309675"></script>
+	<script type="text/javascript" src="elementlist.js?4146159183"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -23,6 +23,8 @@
 			<ul>
 				<li><a href="namespace-lib.html">lib<span></span></a>
 						<ul>
+				<li><a href="namespace-lib.Math.html">Math</a>
+						</li>
 				<li><a href="namespace-lib.Net.html">Net</a>
 						</li>
 				<li><a href="namespace-lib.Time.html">Time</a>
@@ -43,6 +45,7 @@
 			<ul>
 				<li><a href="class-lib.Lib.html">lib\Lib</a></li>
 				<li><a href="class-lib.Loading.html">lib\Loading</a></li>
+				<li><a href="class-lib.Math.Math.html">lib\Math\Math</a></li>
 				<li><a href="class-lib.Net.Database.html">lib\Net\Database</a></li>
 				<li><a href="class-lib.Net.Net.html">lib\Net\Net</a></li>
 				<li><a href="class-lib.Time.Czech.html">lib\Time\Czech</a></li>
@@ -61,11 +64,9 @@
 
 			<h3>Functions</h3>
 			<ul>
-				<li><a href="function-factorial.html">factorial</a></li>
 				<li><a href="function-folderContent.html">folderContent</a></li>
 				<li><a href="function-folderContentWithoutDots.html">folderContentWithoutDots</a></li>
 				<li><a href="function-http_prihlaseni.html">http_prihlaseni</a></li>
-				<li><a href="function-mocnina.html">mocnina</a></li>
 				<li><a href="function-obnovit.html">obnovit</a></li>
 				<li><a href="function-poslaniEmailu.html">poslaniEmailu</a></li>
 				<li><a href="function-presmerovat.html">presmerovat</a></li>
@@ -123,6 +124,13 @@
 				</li>
 
 			<li><div class="notlast"><a href="class-lib.Loading.html"><span>lib\Loading</span></a>
+			
+			
+			</div>
+
+				</li>
+
+			<li><div class="notlast"><a href="class-lib.Math.Math.html"><span>lib\Math\Math</span></a>
 			
 			
 			</div>
