--- a/_doc/namespace-None.html
+++ b/_doc/namespace-None.html
@@ -7,7 +7,7 @@
 	<title>No namespace | lib</title>
 
 	<script type="text/javascript" src="resources/combined.js?3008458700"></script>
-	<script type="text/javascript" src="elementlist.js?3014309675"></script>
+	<script type="text/javascript" src="elementlist.js?4146159183"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -23,6 +23,8 @@
 			<ul>
 				<li><a href="namespace-lib.html">lib<span></span></a>
 						<ul>
+				<li><a href="namespace-lib.Math.html">Math</a>
+						</li>
 				<li><a href="namespace-lib.Net.html">Net</a>
 						</li>
 				<li><a href="namespace-lib.Time.html">Time</a>
@@ -46,11 +48,9 @@
 
 			<h3>Functions</h3>
 			<ul>
-				<li><a href="function-factorial.html">factorial</a></li>
 				<li><a href="function-folderContent.html">folderContent</a></li>
 				<li><a href="function-folderContentWithoutDots.html">folderContentWithoutDots</a></li>
 				<li><a href="function-http_prihlaseni.html">http_prihlaseni</a></li>
-				<li><a href="function-mocnina.html">mocnina</a></li>
 				<li><a href="function-obnovit.html">obnovit</a></li>
 				<li><a href="function-poslaniEmailu.html">poslaniEmailu</a></li>
 				<li><a href="function-presmerovat.html">presmerovat</a></li>
@@ -107,10 +107,6 @@
 <table class="summary" id="functions">
 <caption>Functions summary</caption>
 <tr>
-	<td class="name"><a href="function-factorial.html">factorial</a></td>
-	<td></td>
-</tr>
-<tr>
 	<td class="name"><a href="function-folderContent.html">folderContent</a></td>
 	<td></td>
 </tr>
@@ -120,10 +116,6 @@
 </tr>
 <tr>
 	<td class="name"><a href="function-http_prihlaseni.html">http_prihlaseni</a></td>
-	<td></td>
-</tr>
-<tr>
-	<td class="name"><a href="function-mocnina.html">mocnina</a></td>
 	<td></td>
 </tr>
 <tr>
