Added lots of colored icons.

--- a/tests/fontAwesome/facolors.html
+++ b/tests/fontAwesome/facolors.html
@@ -3,73 +3,225 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Font Awesome colors</title>
-		<link rel="stylesheet" href="../libs/fortawesome/font-awesome/css/font-awesome.min.css">
-		<link rel="stylesheet" href="../src/facolors.css">
+		<link rel="stylesheet" href="../../libs/fortawesome/font-awesome/css/font-awesome.min.css">
+		<link rel="stylesheet" href="../../src/fontAwesome/facolors.css">
+		
+		<style>
+			table { width: 100%; }
+			td { padding: 5px 10px; vertical-align: middle; text-align: center; }
+			i { margin: 5px 2px; }
+		</style>
 	</head>
 	<body>
-<ul style="list-style-type: none;">
-	<li title="Facebook">
-		<i class="fa-facebook"></i>
-		<i class="fa-facebook-f"></i>
-		<i class="fa-facebook-official"></i>
-		<i class="fa-facebook-square"></i>
-	</li>
-
-	<li title="Foursquare">
-		<i class="fa-foursquare"></i>
-	</li>
-
-	<li title="GitHub">
-		<i class="fa-github"></i>
-		<i class="fa-github-alt"></i>
-		<i class="fa-github-square"></i>
-	</li>
-
-	<li title="Google+">
-		<i class="fa-google-plus"></i>
-		<i class="fa-google-plus-circle"></i>
-		<i class="fa-google-plus-official"></i>
-		<i class="fa-google-plus-square"></i>
-	</li>
-
-	<li title="IMDb">
-		<i class="fa-imdb"></i>
-	</li>
-
-	<li title="Last.fm">
-		<i class="fa-lastfm"></i>
-		<i class="fa-lastfm-square"></i>
-	</li>
-
-	<li title="LinkedIn">
-		<i class="fa-linkedin"></i>
-		<i class="fa-linkedin-square"></i>
-	</li>
-
-	<li title="SoundCloud">
-		<i class="fa-soundcloud"></i>
-	</li>
-
-	<li title="Steam">
-		<i class="fa-steam"></i>
-		<i class="fa-steam-square"></i>
-	</li>
-
-	<li title="Twitter">
-		<i class="fa-twitter"></i>
-		<i class="fa-twitter-square"></i>
-	</li>
-
-	<li title="Wikipedia">
-		<i class="fa-wikipedia-w"></i>
-	</li>
-
-	<li title="Youtube">
-		<i class="fa-youtube"></i>
-		<i class="fa-youtube-play"></i>
-		<i class="fa-youtube-square"></i>
-	</li>
-</ul>
+<table>
+	<tbody>
+		<tr>
+			<td title="Android">
+				<i class="fa-android"></i>
+			</td>
+			
+			<td title="Apple">
+				<i class="fa-apple"></i>
+			</td>
+			
+			<td title="Bitbucket">
+				<i class="fa-bitbucket"></i><i class="fa-bitbucket-square"></i>
+			</td>
+			
+			<td title="Bluetooth">
+				<i class="fa-bluetooth"></i><i class="fa-bluetooth-b"></i>
+			</td>
+			
+			<td title="DeviantArt">
+				<i class="fa-deviantart"></i>
+			</td>
+			
+			<td title="Digg">
+				<i class="fa-digg"></i>
+			</td>
+			
+			<td title="Dropbox">
+				<i class="fa-dropbox"></i>
+			</td>
+			
+			<td title="Drupal">
+				<i class="fa-drupal"></i>
+			</td>
+			
+			<td title="Edge">
+				<i class="fa-edge"></i><i class="fa-internet-explorer"></i>
+			</td>
+			
+			<td title="Facebook">
+				<i class="fa-facebook"></i><i class="fa-facebook-f"></i><i class="fa-facebook-official"></i><i class="fa-facebook-square"></i>
+			</td>
+		</tr>
+		<tr>
+			<td title="Font Awesome">
+				<i class="fa-fa"></i><i class="fa-font-awesome"></i>
+			</td>
+			
+			<td title="Foursquare">
+				<i class="fa-foursquare"></i>
+			</td>
+			
+			<td title="GitHub">
+				<i class="fa-github"></i><i class="fa-github-alt"></i><i class="fa-github-square"></i>
+			</td>
+			
+			<td title="Gitlab">
+				<i class="fa-gitlab"></i>
+			</td>
+			
+			<td title="Google">
+				<i class="fa-google"></i>
+			</td>
+			
+			<td title="Google+">
+				<i class="fa-google-plus"></i><i class="fa-google-plus-circle"></i><i class="fa-google-plus-official"></i><i class="fa-google-plus-square"></i>
+			</td>
+			
+			<td title="Heart">
+				<i class="fa-heart"></i><i class="fa-heart-o"></i><i class="fa-heartbeat"></i>
+			</td>
+			
+			<td title="IMDb">
+				<i class="fa-imdb"></i>
+			</td>
+			
+			<td title="Instagram">
+				<i class="fa-instagram"></i>
+			</td>
+			
+			<td title="JS fiddle">
+				<i class="fa-jsfiddle"></i>
+			</td>
+		</tr>
+		<tr>
+			<td title="Last.fm">
+				<i class="fa-lastfm"></i><i class="fa-lastfm-square"></i>
+			</td>
+			
+			<td title="LinkedIn">
+				<i class="fa-linkedin"></i><i class="fa-linkedin-square"></i>
+			</td>
+			
+			<td title="Linux">
+				<i class="fa-linux"></i>
+			</td>
+			
+			<td title="Medium">
+				<i class="fa-medium"></i>
+			</td>
+			
+			<td title="Opera">
+				<i class="fa-opera"></i>
+			</td>
+			
+			<td title="Paypal">
+				<i class="fa-cc-paypal"></i><i class="fa-paypal"></i>
+			</td>
+			
+			<td title="Pied Piper">
+				<i class="fa-pied-piper"></i><i class="fa-pied-piper-alt"></i><i class="fa-pied-piper-pp"></i>
+			</td>
+			
+			<td title="Pinterest">
+				<i class="fa-pinterest"></i><i class="fa-pinterest-p"></i><i class="fa-pinterest-square"></i>
+			</td>
+			
+			<td title="Pocket">
+				<i class="fa-get-pocket"></i>
+			</td>
+			
+			<td title="Reddit">
+				<i class="fa-reddit"></i><i class="fa-reddit-alien"></i><i class="fa-reddit-square"></i>
+			</td>
+		</tr>
+		<tr>
+			<td title="Skype">
+				<i class="fa-skype"></i>
+			</td>
+			
+			<td title="Snapchat">
+				<i class="fa-snapchat"></i><i class="fa-snapchat-ghost"></i><i class="fa-snapchat-square"></i>
+			</td>
+			
+			<td title="SoundCloud">
+				<i class="fa-soundcloud"></i>
+			</td>
+			
+			<td title="Spotify">
+				<i class="fa-spotify"></i>
+			</td>
+			
+			<td title="Star">
+				<i class="fa-star"></i><i class="fa-star-half"></i><i class="fa-star-half-o"></i><i class="fa-star-o"></i>
+			</td>
+			
+			<td title="Steam">
+				<i class="fa-steam"></i><i class="fa-steam-square"></i>
+			</td>
+			
+			<td title="Telegram">
+				<i class="fa-telegram"></i>
+			</td>
+			
+			<td title="Trello">
+				<i class="fa-trello"></i>
+			</td>
+			
+			<td title="Tripadvisor">
+				<i class="fa-tripadvisor"></i>
+			</td>
+			
+			<td title="Tumblr">
+				<i class="fa-tumblr"></i><i class="fa-tumblr-square"></i>
+			</td>
+		</tr>
+		<tr>
+			<td title="Twitch">
+				<i class="fa-twitch"></i>
+			</td>
+			
+			<td title="Twitter">
+				<i class="fa-twitter"></i><i class="fa-twitter-square"></i>
+			</td>
+			
+			<td title="Vimeo">
+				<i class="fa-vimeo"></i><i class="fa-vimeo-square"></i>
+			</td>
+			
+			<td title="Vine">
+				<i class="fa-vine"></i>
+			</td>
+			
+			<td title="Whatsapp">
+				<i class="fa-whatsapp"></i>
+			</td>
+			
+			<td title="Windows">
+				<i class="fa-windows"></i>
+			</td>
+			
+			<td title="Wikipedia">
+				<i class="fa-wikipedia-w"></i>
+			</td>
+			
+			<td title="Yahoo">
+				<i class="fa-yahoo"></i>
+			</td>
+			
+			<td title="Yelp">
+				<i class="fa-yelp"></i>
+			</td>
+			
+			<td title="Youtube">
+				<i class="fa-youtube"></i><i class="fa-youtube-play"></i><i class="fa-youtube-square"></i>
+			</td>
+		</tr>
+	</tbody>
+</table>
 
 <script>
 	icons = document.getElementsByTagName("i");
