Fixed loader for tests.

--- a/tests/fontAwesome/facolors.html
+++ b/tests/fontAwesome/facolors.html
@@ -225,7 +225,7 @@
 
 <script>
 	icons = document.getElementsByTagName("i");
-	for(i=0; i<icons.length; i++) {
+	for(var i=0; i<icons.length; i++) {
 		icons[i].setAttribute("title", icons[i].className);
 		icons[i].classList.add("fa", "fa-2x");
 	}
