Upgraded Facolors to Font Awesome 5.

--- a/tests/fontAwesome/facolors.html
+++ b/tests/fontAwesome/facolors.html
@@ -3,231 +3,327 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Font Awesome colors</title>
-		<link rel="stylesheet" href="../../libs/fortawesome/font-awesome/css/font-awesome.min.css">
+		
+		<link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free-webfonts/css/fontawesome.css">
+		<link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free-webfonts/css/fa-brands.css">
+		<link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free-webfonts/css/fa-solid.css">
+		<link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free-webfonts/css/fa-regular.css">
+		<link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
 		<link rel="stylesheet" href="../../src/fontAwesome/facolors.css">
 		
 		<style>
-			table { width: 100%; }
-			td { padding: 5px 10px; vertical-align: middle; text-align: center; }
+            ul { list-style-type: none; padding: 0; }
+			li { padding: 5px 10px; vertical-align: middle; text-align: center; display: inline-block; }
 			i { margin: 5px 2px; }
 		</style>
 	</head>
 	<body>
-<table>
-	<tbody>
-		<tr>
-			<td title="Android">
+		<ul id="brands">
+			<li title="Android">
 				<i class="fa-android"></i>
-			</td>
+			</li>
 			
-			<td title="Apple">
-				<i class="fa-apple"></i>
-			</td>
+			<li title="Angular">
+				<i class="fa-angular"></i>
+			</li>
 			
-			<td title="Bitbucket">
+			<li title="Apple">
+				<i class="fa-apple"></i><i class="fa-apple-pay"></i><i class="fa-cc-apple-pay"></i>
+			</li>
+			
+			<li title="Bitbucket">
 				<i class="fa-bitbucket"></i><i class="fa-bitbucket-square"></i>
-			</td>
+			</li>
 			
-			<td title="Bluetooth">
+			<li title="Bitcoin">
+				<i class="fa-bitcoin"></i><i class="fa-btc"></i>
+			</li>
+			
+			<li title="Blackberry">
+				<i class="fa-blackberry"></i>
+			</li>
+			
+			<li title="Blogger">
+				<i class="fa-blogger"></i><i class="fa-blogger-b"></i>
+			</li>
+			
+			<li title="Bluetooth">
 				<i class="fa-bluetooth"></i><i class="fa-bluetooth-b"></i>
-			</td>
+			</li>
 			
-			<td title="DeviantArt">
+			<li title="Creative Commons">
+				<i class="fa-creative-commons"></i>
+			</li>
+			
+			<li title="CSS">
+				<i class="fa-css3"></i><i class="fa-css3-alt"></i>
+			</li>
+			
+			<li title="DeviantArt">
 				<i class="fa-deviantart"></i>
-			</td>
+			</li>
 			
-			<td title="Digg">
+			<li title="Digg">
 				<i class="fa-digg"></i>
-			</td>
+			</li>
 			
-			<td title="Dropbox">
+			<li title="Dropbox">
 				<i class="fa-dropbox"></i>
-			</td>
+			</li>
 			
-			<td title="Drupal">
+			<li title="Drupal">
 				<i class="fa-drupal"></i>
-			</td>
+			</li>
 			
-			<td title="Edge">
+			<li title="Edge">
 				<i class="fa-edge"></i><i class="fa-internet-explorer"></i>
-			</td>
+			</li>
 			
-			<td title="Facebook">
+			<li title="Facebook">
 				<i class="fa-facebook"></i><i class="fa-facebook-f"></i><i class="fa-facebook-official"></i><i class="fa-facebook-square"></i>
-			</td>
-		</tr>
-		<tr>
-			<td title="Font Awesome">
-				<i class="fa-fa"></i><i class="fa-font-awesome"></i>
-			</td>
+			</li>
+			<li title="Facebook Messenger">
+				<i class="fa-facebook-messenger"></i>
+			</li>
 			
-			<td title="Foursquare">
+			<li title="Font Awesome">
+				<i class="fa-font-awesome"></i><i class="fa-font-awesome-alt"></i><i class="fa-font-awesome-flag"></i>
+			</li>
+			
+			<li title="Foursquare">
 				<i class="fa-foursquare"></i>
-			</td>
+			</li>
 			
-			<td title="GitHub">
+			<li title="Git">
+				<i class="fa-git"></i><i class="fa-git-square"></i>
+			</li>
+			
+			<li title="GitHub">
 				<i class="fa-github"></i><i class="fa-github-alt"></i><i class="fa-github-square"></i>
-			</td>
+			</li>
 			
-			<td title="Gitlab">
+			<li title="Gitkraken">
+				<i class="fa-gitkraken"></i>
+			</li>
+			
+			<li title="Gitlab">
 				<i class="fa-gitlab"></i>
-			</td>
+			</li>
 			
-			<td title="Google">
+			<li title="Gitter">
+				<i class="fa-gitter"></i>
+			</li>
+			
+			<li title="Goodreads">
+				<i class="fa-goodreads"></i><i class="fa-goodreads-g"></i>
+			</li>
+			
+			<li title="Google">
 				<i class="fa-google"></i>
-			</td>
+			</li>
 			
-			<td title="Google+">
-				<i class="fa-google-plus"></i><i class="fa-google-plus-circle"></i><i class="fa-google-plus-official"></i><i class="fa-google-plus-square"></i>
-			</td>
+			<li title="Google+">
+				<i class="fa-google-plus"></i><i class="fa-google-plus-g"></i><i class="fa-google-plus-square"></i>
+			</li>
 			
-			<td title="Heart">
-				<i class="fa-heart"></i><i class="fa-heart-o"></i><i class="fa-heartbeat"></i>
-			</td>
+			<li title="Gulp">
+				<i class="fa-gulp"></i>
+			</li>
 			
-			<td title="IMDb">
+			<li title="HTML">
+				<i class="fa-html5"></i>
+			</li>
+			
+			<li title="IMDb">
 				<i class="fa-imdb"></i>
-			</td>
+			</li>
 			
-			<td title="Instagram">
+			<li title="Instagram">
 				<i class="fa-instagram"></i>
-			</td>
+			</li>
 			
-			<td title="JS fiddle">
+			<li title="JavaScript">
+				<i class="fa-js"></i><i class="fa-js-square"></i>
+			</li>
+			
+			<li title="JS fiddle">
 				<i class="fa-jsfiddle"></i>
-			</td>
-		</tr>
-		<tr>
-			<td title="Last.fm">
+			</li>
+			
+			<li title="Kickstarter">
+				<i class="fa-kickstarter"></i><i class="fa-kickstarter-k"></i>
+			</li>
+		
+			<li title="Last.fm">
 				<i class="fa-lastfm"></i><i class="fa-lastfm-square"></i>
-			</td>
+			</li>
 			
-			<td title="LinkedIn">
-				<i class="fa-linkedin"></i><i class="fa-linkedin-square"></i>
-			</td>
+			<li title="Less">
+				<i class="fa-less"></i>
+			</li>
 			
-			<td title="Linux">
+			<li title="LinkedIn">
+				<i class="fa-linkedin"></i><i class="fa-linkedin-in"></i>
+			</li>
+			
+			<li title="Linux">
 				<i class="fa-linux"></i>
-			</td>
+			</li>
 			
-			<td title="Medium">
-				<i class="fa-medium"></i>
-			</td>
+			<li title="Medium">
+				<i class="fa-medium"></i><i class="fa-medium-m"></i>
+			</li>
 			
-			<td title="Opera">
+			<li title="Node">
+				<i class="fa-node"></i><i class="fa-node-js"></i><i class="fa-npm"></i>
+			</li>
+			
+			<li title="Opera">
 				<i class="fa-opera"></i>
-			</td>
+			</li>
 			
-			<td title="Paypal">
+			<li title="Paypal">
 				<i class="fa-cc-paypal"></i><i class="fa-paypal"></i>
-			</td>
+			</li>
 			
-			<td title="Pied Piper">
+			<li title="Pied Piper">
 				<i class="fa-pied-piper"></i><i class="fa-pied-piper-alt"></i><i class="fa-pied-piper-pp"></i>
-			</td>
+			</li>
 			
-			<td title="Pinterest">
+			<li title="Pinterest">
 				<i class="fa-pinterest"></i><i class="fa-pinterest-p"></i><i class="fa-pinterest-square"></i>
-			</td>
+			</li>
 			
-			<td title="Pocket">
+			<li title="Pocket">
 				<i class="fa-get-pocket"></i>
-			</td>
+			</li>
 			
-			<td title="Reddit">
+			<li title="Python">
+				<i class="fa-python"></i>
+			</li>
+			
+			<li title="React">
+				<i class="fa-react"></i>
+			</li>
+			
+			<li title="Reddit">
 				<i class="fa-reddit"></i><i class="fa-reddit-alien"></i><i class="fa-reddit-square"></i>
-			</td>
-		</tr>
-		<tr>
-			<td title="Skype">
+			</li>
+			
+			<li title="Sass">
+				<i class="fa-sass"></i>
+			</li>
+		
+			<li title="Skype">
 				<i class="fa-skype"></i>
-			</td>
+			</li>
 			
-			<td title="Snapchat">
+			<li title="Slack">
+				<i class="fa-slack"></i><i class="fa-slack-hash"></i>
+			</li>
+			
+			<li title="Snapchat">
 				<i class="fa-snapchat"></i><i class="fa-snapchat-ghost"></i><i class="fa-snapchat-square"></i>
-			</td>
+			</li>
 			
-			<td title="SoundCloud">
+			<li title="SoundCloud">
 				<i class="fa-soundcloud"></i>
-			</td>
+			</li>
 			
-			<td title="Spotify">
+			<li title="Spotify">
 				<i class="fa-spotify"></i>
-			</td>
+			</li>
 			
-			<td title="Star">
-				<i class="fa-star"></i><i class="fa-star-half"></i><i class="fa-star-half-o"></i><i class="fa-star-o"></i>
-			</td>
+			<li title="Steam">
+				<i class="fa-steam"></i><i class="fa-steam-square"></i><i class="fa-steam-symbol"></i>
+			</li>
 			
-			<td title="Steam">
-				<i class="fa-steam"></i><i class="fa-steam-square"></i>
-			</td>
+			<li title="Telegram">
+				<i class="fa-telegram"></i><i class="fa-telegram-plane"></i>
+			</li>
 			
-			<td title="Telegram">
-				<i class="fa-telegram"></i>
-			</td>
-			
-			<td title="Trello">
+			<li title="Trello">
 				<i class="fa-trello"></i>
-			</td>
+			</li>
 			
-			<td title="Tripadvisor">
+			<li title="Tripadvisor">
 				<i class="fa-tripadvisor"></i>
-			</td>
+			</li>
 			
-			<td title="Tumblr">
+			<li title="Tumblr">
 				<i class="fa-tumblr"></i><i class="fa-tumblr-square"></i>
-			</td>
-		</tr>
-		<tr>
-			<td title="Twitch">
+			</li>
+		
+			<li title="Twitch">
 				<i class="fa-twitch"></i>
-			</td>
+			</li>
 			
-			<td title="Twitter">
+			<li title="Twitter">
 				<i class="fa-twitter"></i><i class="fa-twitter-square"></i>
-			</td>
+			</li>
 			
-			<td title="Vimeo">
-				<i class="fa-vimeo"></i><i class="fa-vimeo-square"></i>
-			</td>
+			<li title="Vimeo">
+				<i class="fa-vimeo"></i><i class="fa-vimeo-square"></i><i class="fa-vimeo-v"></i>
+			</li>
 			
-			<td title="Vine">
+			<li title="Vine">
 				<i class="fa-vine"></i>
-			</td>
+			</li>
 			
-			<td title="Whatsapp">
-				<i class="fa-whatsapp"></i>
-			</td>
+			<li title="Whatsapp">
+				<i class="fa-whatsapp"></i><i class="fa-whatsapp-square"></i>
+			</li>
 			
-			<td title="Windows">
+			<li title="Windows">
 				<i class="fa-windows"></i>
-			</td>
+			</li>
 			
-			<td title="Wikipedia">
+			<li title="Wikipedia">
 				<i class="fa-wikipedia-w"></i>
-			</td>
+			</li>
 			
-			<td title="Yahoo">
+			<li title="Wordpress">
+				<i class="fa-wordpress"></i><i class="fa-wordpress-simple"></i>
+			</li>
+			
+			<li title="Xbox">
+				<i class="fa-xbox"></i>
+			</li>
+			
+			<li title="Yahoo">
 				<i class="fa-yahoo"></i>
-			</td>
+			</li>
 			
-			<td title="Yelp">
+			<li title="Yelp">
 				<i class="fa-yelp"></i>
-			</td>
+			</li>
 			
-			<td title="Youtube">
+			<li title="Youtube">
 				<i class="fa-youtube"></i><i class="fa-youtube-play"></i><i class="fa-youtube-square"></i>
-			</td>
-		</tr>
-	</tbody>
-</table>
+			</li>
+		</ul>
+		
+		<ul>
+			<li title="Heart">
+				<i class="fas fa-heart"></i><i class="far fa-heart"></i><i class="fas fa-heartbeat"></i>
+			</li>
+			
+			<li title="Star">
+				<i class="fas fa-star"></i><i class="far fa-star"></i>
+				<i class="fas fa-star-half"></i><i class="far fa-star-half"></i>
+			</li>
+		</ul>
 
 <script>
-	icons = document.getElementsByTagName("i");
+	icons = document.querySelectorAll("i");
 	for(var i=0; i<icons.length; i++) {
 		icons[i].setAttribute("title", icons[i].className);
-		icons[i].classList.add("fa", "fa-2x");
+		icons[i].classList.add("fa-2x");
+	}
+	
+	brands = document.querySelectorAll("#brands i");
+	for(i=0; i<brands.length; i++) {
+		brands[i].classList.add("fab");
 	}
 </script>
 	</body>
