Added type hints

--- a/tests/geo/index.html
+++ b/tests/geo/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Testing Geolocation</title>
-		<script type="text/javascript" src="../../src/geo/geolocation.js"></script>
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiV2nqBqcViAbBYIAVwvSzsHdUB187IIg"></script>
-		<script src="../../src/geo/gmaps.js"></script>
-	</head>
-	<body>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Testing Geolocation</title>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiV2nqBqcViAbBYIAVwvSzsHdUB187IIg"></script>
+	<script src="../../src/geo/geolocation.js"></script>
+	<script src="../../src/geo/gmaps.js"></script>
+</head>
+<body>
 <div id="map"></div>
 <div id="geolocation"></div>
 
@@ -18,5 +18,5 @@
 	
 	locate(showPosition, "geolocation");
 </script>
-	</body>
+</body>
 </html>
